tests/errors/type_args_on_nongeneric.dang
pub x: String[Int!]! = "x"
